--- a/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
@@ -1,31 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextArea?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
-<?import com.jfoenix.controls.JFXComboBox?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRRS">
    <children>
           <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
@@ -57,6 +41,7 @@
                <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -71,7 +56,7 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                          <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                          <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6" />
                           <JFXButton contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7">
                               <graphic>
                                   <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
@@ -86,7 +71,7 @@
                                   <Font name="System Bold Italic" size="24.0" />
                               </font>
                           </Text>
-                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Dimitri Berardi" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Dimitri Berardi" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="TOP">
                               <font>
                                   <Font name="System Bold" size="12.0" />
                               </font>
@@ -97,7 +82,7 @@
                                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                               </padding>
                           </TextArea>
-                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                               <font>
                                   <Font name="System Bold" size="18.0" />
                               </font>
@@ -341,7 +326,7 @@
                                         <Font name="System Bold" size="18.0" />
                                     </font>
                                 </Text>
-                                <TextArea fx:id="additionalCommentField" prefHeight="200.0" prefWidth="200.0" promptText="Max: 100 Characters">
+                                <TextArea fx:id="additionalCommentField" prefHeight="200.0" prefWidth="317.0" promptText="Max: 100 Characters">
                                     <padding>
                                         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                                     </padding>
