--- a/BabySittingAPI/src/main/resources/add_user.fxml
+++ b/BabySittingAPI/src/main/resources/add_user.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerSRB">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerAU">
    <children>
       <GridPane alignment="CENTER">
         <columnConstraints>
@@ -25,7 +25,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="addButton" onAction="#getAddButton" prefHeight="77.0" prefWidth="158.0" text="ADD" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <JFXButton fx:id="addButton" onAction="#setAddButton" prefHeight="77.0" prefWidth="158.0" text="ADD" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
@@ -50,7 +50,7 @@
                   <Font size="36.0" />
                </font>
             </Text>
-            <JFXTextField fx:id="userID" promptText="Enter user id for this account" GridPane.columnIndex="1">
+            <JFXTextField fx:id="userIDInput" promptText="Enter user id for this account" GridPane.columnIndex="1">
                <font>
                   <Font size="24.0" />
                </font>
@@ -58,7 +58,7 @@
                   <Insets left="30.0" right="30.0" />
                </padding>
             </JFXTextField>
-            <JFXTextField fx:id="username" prefWidth="640.0" promptText="Enter username for this account" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <JFXTextField fx:id="usernameInput" prefWidth="640.0" promptText="Enter username for this account" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="24.0" />
                </font>
@@ -66,7 +66,7 @@
                   <Insets left="30.0" right="30.0" />
                </padding>
             </JFXTextField>
-            <JFXTextField fx:id="password" promptText="Enter password for this account" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <JFXTextField fx:id="passwordInput" promptText="Enter password for this account" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="24.0" />
                </font>
@@ -74,7 +74,7 @@
                   <Insets left="30.0" right="30.0" />
                </padding>
             </JFXTextField>
-            <JFXTextField fx:id="permissions" promptText="Enter permissions for this account" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <JFXTextField fx:id="permissionsInput" promptText="Enter permissions for this account" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="24.0" />
                </font>
@@ -82,11 +82,6 @@
                   <Insets left="30.0" right="30.0" />
                </padding>
             </JFXTextField>
-            <JFXButton fx:id="cancelButton" onAction="#getCancelButton" prefHeight="77.0" prefWidth="202.0" text="CANCEL" textAlignment="CENTER" GridPane.rowIndex="4">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </JFXButton>
          </children>
       </GridPane>
    </children>
