--- a/BabySittingAPI/src/main/resources/overall.fxml
+++ b/BabySittingAPI/src/main/resources/overall.fxml
@@ -7,17 +7,22 @@
 <AnchorPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
     <JFXTabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE" minHeight="720.0" minWidth="1280.0">
         <Tab text="Create Service Request">
-            <AnchorPane fx:id="createTabPane">
+            <AnchorPane fx:id="createServiceRequestTabPane">
+
+            </AnchorPane>
+        </Tab>
+        <Tab text="Add User">
+            <AnchorPane fx:id="addUserTabPane">
 
             </AnchorPane>
         </Tab>
         <Tab text="View Service Requests">
-            <AnchorPane fx:id="viewTabPane">
+            <AnchorPane fx:id="viewServiceRequestTabPane">
 
             </AnchorPane>
         </Tab>
         <Tab text="View Users">
-            <AnchorPane fx:id="userTabPane">
+            <AnchorPane fx:id="viewUsersTabPane">
 
             </AnchorPane>
         </Tab>
