--- a/Project/src/main/resources/reservations/reservations_main_calendar_view.fxml
+++ b/Project/src/main/resources/reservations/reservations_main_calendar_view.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
+<?import com.calendarfx.view.CalendarView?>
 <StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="reservations.UIControllerRVCV">
     <children>
         <ImageView fx:id="backgroundImage" onDragDetected="#initialize" pickOnBounds="true" preserveRatio="true">
@@ -16,7 +17,7 @@
                 <Image url="@../images/Hospitalbackground.png" />
             </image>
         </ImageView>
-        <BorderPane>
+        <BorderPane >
             <top>
                 <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                     <menus>
@@ -29,7 +30,7 @@
                 </MenuBar>
             </top>
          <center>
-            <DayPage fx:id="day" maxHeight="900.0" maxWidth="1200.0" minHeight="200.0" minWidth="300.0" pickOnBounds="true" BorderPane.alignment="TOP_LEFT" />
+            <CalendarView fx:id="cv" prefHeight="-Infinity" prefWidth="-Infinity" maxHeight="900.0" maxWidth="1300.0" minHeight="200.0" minWidth="300.0" pickOnBounds="true" BorderPane.alignment="TOP_LEFT" />
          </center>
         </BorderPane>
     </children>
