--- a/Project/src/main/resources/application/about_page.fxml
+++ b/Project/src/main/resources/application/about_page.fxml
@@ -95,6 +95,14 @@
                                     <Insets left="50.0" />
                                  </GridPane.margin>
                               </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="The Brigham &amp; Women’s Hospital maps and data used in this application are copyrighted and provided for the sole use of educational purposes." GridPane.rowIndex="4">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" top="70.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Text>
                            </children>
                            <padding>
                               <Insets left="20.0" />
