--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -124,11 +124,23 @@
                               </Text>
                               <FlowPane alignment="CENTER" orientation="VERTICAL" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
                                  <children>
-                                    <JFXButton fx:id="loginAsUserButton" contentDisplay="CENTER" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                    </JFXButton>
+                                    <FlowPane prefWidth="250.0">
+                                       <children>
+                                          <JFXButton fx:id="loginAsUserButton" contentDisplay="CENTER" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </JFXButton>
+                                          <JFXButton fx:id="swipeUser" alignment="CENTER" contentDisplay="CENTER" onAction="#setLoginAsUserButton" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                             <FlowPane.margin>
+                                                <Insets left="30.0" />
+                                             </FlowPane.margin>
+                                          </JFXButton>
+                                       </children>
+                                    </FlowPane>
                                  </children>
                                  <opaqueInsets>
                                     <Insets bottom="5.0" />
@@ -185,11 +197,23 @@
                                     <Font size="25.0" />
                                  </font>
                               </Text>
-                              <JFXButton fx:id="loginAsAdminButton" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
-                                 <font>
-                                    <Font name="System Bold" size="15.0" />
-                                 </font>
-                              </JFXButton>
+                              <FlowPane GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
+                                 <children>
+                                    <JFXButton fx:id="loginAsAdminButton" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="swipeAdmin" alignment="CENTER" contentDisplay="CENTER" onAction="#setLoginAsUserButton" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
+                                       <FlowPane.margin>
+                                          <Insets left="40.0" />
+                                       </FlowPane.margin>
+                                    </JFXButton>
+                                 </children>
+                              </FlowPane>
                            </children>
                         </GridPane>
                      </content>
