--- a/Project/src/main/resources/directions_popup.fxml
+++ b/Project/src/main/resources/directions_popup.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXToggleButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -29,19 +29,19 @@
                   </AnchorPane>
               </content>
             </ScrollPane>
-            <TextField fx:id="phoneNumber" alignment="CENTER" layoutX="322.0" layoutY="111.0" prefHeight="25.0" prefWidth="263.0" promptText="Enter your phone number" />
-            <TextField fx:id="email" alignment="CENTER" layoutX="322.0" layoutY="259.0" prefHeight="25.0" prefWidth="263.0" promptText="Enter your email" />
-            <JFXButton fx:id="textDirections" layoutX="322.0" layoutY="14.0" onAction="#sendText" prefHeight="87.0" prefWidth="263.0" styleClass="jfx-button-OK" stylesheets="@css/background.css" text="Text Me The Directions">
+            <TextField fx:id="phoneNumber" alignment="CENTER" layoutX="322.0" layoutY="213.0" prefHeight="25.0" prefWidth="263.0" promptText="Enter your phone number" />
+            <TextField fx:id="email" alignment="CENTER" layoutX="322.0" layoutY="361.0" prefHeight="25.0" prefWidth="263.0" promptText="Enter your email" />
+            <JFXButton fx:id="textDirections" layoutX="322.0" layoutY="116.0" onAction="#sendText" prefHeight="87.0" prefWidth="263.0" styleClass="jfx-button-OK" stylesheets="@css/background.css" text="Text Me The Directions">
                <font>
                   <Font size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="emailDirections" layoutX="322.0" layoutY="157.0" onAction="#sendEmail" prefHeight="87.0" prefWidth="263.0" styleClass="jfx-button-OK" stylesheets="@css/background.css" text="Email Me The Directions">
+            <JFXButton fx:id="emailDirections" layoutX="322.0" layoutY="259.0" onAction="#sendEmail" prefHeight="87.0" prefWidth="263.0" styleClass="jfx-button-OK" stylesheets="@css/background.css" text="Email Me The Directions">
                <font>
                   <Font size="20.0" />
                </font>
             </JFXButton>
-            <JFXToggleButton fx:id="directionSwitch" layoutX="372.0" layoutY="317.0" stylesheets="@/css/background.css" text="See All Directions" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+            <JFXComboBox fx:id="floorSelect" focusColor="WHITE" layoutX="322.0" layoutY="24.0" prefHeight="64.0" prefWidth="263.0" promptText="What floor's directions would you like to view?" style="-fx-background-color: #ffffff" />
       </children>
     </AnchorPane>
   </children>
