--- a/Project/src/main/resources/admintools/admin_tools_main.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_main.fxml
@@ -67,7 +67,7 @@
                   </Text>
                   <FlowPane alignment="BOTTOM_CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                      <children>
-                        <JFXButton fx:id="viewUsersButton1" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="15.0" onAction="#setUsersButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-tools-main" stylesheets="@../css/background.css" text="Find Path" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <JFXButton fx:id="findPathButton" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="15.0" onAction="#setFindPathButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-tools-main" stylesheets="@../css/background.css" text="Find Path" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="28.0" />
                            </font>
@@ -179,7 +179,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="viewServiceRequestsButton1" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="2.0" onAction="#setViewServiceRequestsButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-tools-main-horizontal" stylesheets="@../css/background.css" text="Application Setting" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <JFXButton fx:id="applicationSettingButton" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="2.0" onAction="#setApplicationSettingButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-tools-main-horizontal" stylesheets="@../css/background.css" text="Application Setting" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="28.0" />
                            </font>
