--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -21,6 +21,16 @@
 
 <StackPane minHeight="720.0" minWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerLM">
    <children>
+      <JFXTextField fx:id="adminID">
+         <StackPane.margin>
+            <Insets top="200.0" />
+         </StackPane.margin>
+      </JFXTextField>
+      <JFXTextField fx:id="userID">
+         <StackPane.margin>
+            <Insets top="200.0" />
+         </StackPane.margin>
+      </JFXTextField>
       <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true" StackPane.alignment="BOTTOM_CENTER">
          <image>
             <Image url="@../images/MainMenu.png" />
@@ -97,7 +107,6 @@
                             <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <JFXTextField fx:id="userID" GridPane.rowIndex="3" />
                               <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                                  <image>
                                     <Image url="@../pictures/BWH.JPG" />
@@ -127,12 +136,12 @@
                                  <children>
                                     <FlowPane prefWidth="250.0">
                                        <children>
-                                          <JFXButton fx:id="loginAsUserButton" contentDisplay="CENTER" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
+                                          <JFXButton fx:id="loginAsUserButton" contentDisplay="CENTER" onMouseClicked="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
                                              <font>
                                                 <Font name="System Bold" size="15.0" />
                                              </font>
                                           </JFXButton>
-                                          <JFXButton fx:id="swipeUser" alignment="CENTER" contentDisplay="CENTER" onAction="#setLoginAsUserButton" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
+                                          <JFXButton fx:id="swipeUser" alignment="CENTER" contentDisplay="CENTER" onAction="#setToUserID" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
                                              <font>
                                                 <Font name="System Bold" size="15.0" />
                                              </font>
@@ -200,12 +209,12 @@
                               </Text>
                               <FlowPane GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
                                  <children>
-                                    <JFXButton fx:id="loginAsAdminButton" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
+                                    <JFXButton fx:id="loginAsAdminButton" onMouseClicked="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font>
                                     </JFXButton>
-                                    <JFXButton fx:id="swipeAdmin" alignment="CENTER" contentDisplay="CENTER" onAction="#setLoginAsUserButton" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
+                                    <JFXButton fx:id="swipeAdmin" alignment="CENTER" contentDisplay="CENTER" onAction="#setToAdminID" prefHeight="10.0" prefWidth="109.0" styleClass="jfx-button-login2" stylesheets="@../css/background.css" text="Swipe In" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font>
@@ -215,7 +224,6 @@
                                     </JFXButton>
                                  </children>
                               </FlowPane>
-                              <JFXTextField fx:id="adminID" GridPane.rowIndex="3" />
                            </children>
                         </GridPane>
                      </content>
