--- a/BabySittingAPI/src/main/resources/service_request_babysitting.fxml
+++ b/BabySittingAPI/src/main/resources/service_request_babysitting.fxml
@@ -18,11 +18,12 @@
 <?import javafx.scene.text.Text?>
 
 <StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerSRB">
+   <ImageView><Image url="Hospitalbackground.png"></Image></ImageView>
    <children>
             <BorderPane>
                 <top>
                 </top>
-         <left>
+         <left >
             <GridPane>
                <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
